--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 #form>button {
-    background: #333;
+    background: #4267B2;
     border: none;
     padding: 0 1rem;
     margin: 0.25rem;
